[package]
name = "mover"
version = "0.0.1"
authors = ["Robert Jones <rjjones@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
same-file = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"